codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__add_details.snap
---
source: tui/src/diff_render.rs
assertion_line: 391
expression: terminal.backend()
---
"proposed patch to 1 file (+2 -0)                                                "
"  └ README.md                                                                   "
"    1     +f                                                                    "
"           i                                                                    "
"           r                                                                    "
"           s                                                                    "
"           t                                                                    "
"                                                                                "
"                                                                                "
"           l                                                                    "
