codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__blank_context_line.snap
---
source: tui/src/diff_render.rs
assertion_line: 391
expression: terminal.backend()
---
"proposed patch to 1 file (+1 -1)                                                "
"  └ example.txt                                                                 "
"    1                                                                           "
"    2     -Y                                                                    "
"    2     +Y                                                                    "
"                                                                                "
"                                                                                "
"           c                                                                    "
"           h                                                                    "
"           a                                                                    "
