codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__single_line_replacement_counts.snap
---
source: tui/src/diff_render.rs
assertion_line: 391
expression: terminal.backend()
---
"proposed patch to 1 file (+1 -1)                                                "
"  └ README.md                                                                   "
"    1     -#                                                                    "
"                                                                                "
"                                                                                "
"           C                                                                    "
"           o                                                                    "
"           d                                                                    "
