codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__update_details_with_rename.snap
---
source: tui/src/diff_render.rs
assertion_line: 391
expression: terminal.backend()
---
"proposed patch to 1 file (+1 -1)                                                "
"  └ src/lib.rs → src/lib_new.rs                                                 "
"    1      l                                                                    "
"           i                                                                    "
"           n                                                                    "
"           e                                                                    "
"                                                                                "
"                                                                                "
"           o                                                                    "
"           n                                                                    "
"           e                                                                    "
"    2     -l                                                                    "
