codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__vertical_ellipsis_between_hunks.snap
---
source: tui/src/diff_render.rs
assertion_line: 391
expression: terminal.backend()
---
"proposed patch to 1 file (+2 -2)                                                "
"  └ example.txt                                                                 "
"    1      l                                                                    "
"           i                                                                    "
"           n                                                                    "
"           e                                                                    "
"                                                                                "
"                                                                                "
"           1                                                                    "
"    2     -l                                                                    "
"           i                                                                    "
"           n                                                                    "
"           e                                                                    "
"                                                                                "
"                                                                                "
"           2                                                                    "
